updated the server fle to include an array for about me and embedded each loops in about.erb

--- a/views/about.erb
+++ b/views/about.erb
@@ -1,1 +1,15 @@
 <h1>So let me tell you about me :) </h1>
+
+<h2>Skills</h2>
+<ul>
+  <% @skills.each do |skill| %>
+    <li><%= skill %> </li>
+  <% end %>
+</ul>
+
+<h2>Interests</h2>
+<ul>
+  <% @interests.each do |interest| %>
+    <li><%= interest %> </li>
+  <% end %>
+</ul>
